# Colony-Finder

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: server-indexer.md
src/: ColonyFinder.cpp  ColonyFinder.h  Version.h.in
src/common/: Messages.h
src/download/: DatabaseObserver.h  DatabaseService.cpp  DatabaseService.h  DownloadObserver.h  DownloadSubject.cpp  DownloadSubject.h  DynamicSaxValidator.h  GzipDecompressor.cpp  GzipDecompressor.h  HttpDownloader.cpp  HttpDownloader.h  JsonStreamValidator.cpp  JsonStreamValidator.h  LineSink.cpp  LineSink.h  PipeStreamBuf.cpp  PipeStreamBuf.h  StreamingProcessor.cpp  StreamingProcessor.h
src/logging/: ConsoleLogSink.cpp  ConsoleLogSink.h  FileLogSink.cpp  FileLogSink.h  ILogSink.h  LogLevel.cpp  LogLevel.h  LogRecord.cpp  LogRecord.h  Logger.cpp  Logger.h
src/search/: AsyncSearchService.cpp  AsyncSearchService.h  CompositeJsonSax.h  IndexBuilder.cpp  IndexBuilder.h  IndexBuilderSax.cpp  IndexBuilderSax.h  IndexProgressStreamBuf.h  SearchEngine.cpp  SearchEngine.h  SearchObserver.h  SimdjsonIndexer.cpp  SimdjsonIndexer.h  SystemIndex.h
src/server_indexer_tool/: ArgumentParser.cpp  ArgumentParser.h  CliAppController.cpp  CliAppController.h  CliSelfUpdater.cpp  CliSelfUpdater.h  main.cpp
src/ui/: AppController.cpp  AppController.h  AppTheme.h  FolderDialog.cpp  FolderDialog.h  SettingsObserver.h  SettingsService.cpp  SettingsService.h  SystemMemory.cpp  SystemMemory.h  UiStrings.h  UiUtils.cpp  UiUtils.h  WindowManager.cpp  WindowManager.h
src/ui/components/: FilterPanel.cpp  FilterPanel.h  ResultsPanel.cpp  ResultsPanel.h
src/ui/states/: DownloadIndexState.cpp  DownloadIndexState.h  DownloadingIndexState.cpp  DownloadingIndexState.h  DownloadingState.cpp  DownloadingState.h  ErrorState.cpp  ErrorState.h  ExtractionState.cpp  ExtractionState.h  IAppState.h  IndexOutdatedState.cpp  IndexOutdatedState.h  IndexingState.cpp  IndexingState.h  MainAppState.cpp  MainAppState.h  SchemaUpdateState.cpp  SchemaUpdateState.h  SelectDownloadState.cpp  SelectDownloadState.h  SettingsState.cpp  SettingsState.h  UpdateAvailableState.cpp  UpdateAvailableState.h  WelcomeState.cpp  WelcomeState.h
src/update/: GithubUpdateChecker.cpp  GithubUpdateChecker.h  IUpdateChecker.h  UpdateObserver.h  UpdateService.cpp  UpdateService.h  UpdateSubject.cpp  UpdateSubject.h  UpdaterLauncher.cpp  UpdaterLauncher.h
src/updater/: main.cpp
